--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     
     <script src="Tab.js" type="module"></script>
+    <script src="main.js" type="module" defer></script>
 </head>
 <body>
-    <script src="main.js" type="module"></script>
 </body>
 </html>
